sintatico.output
Grammar

    0 $accept: programa $end

    1 $@1: %empty

    2 programa: $@1 cabecalho variaveis T_INICIO lista_comandos T_FIM

    3 cabecalho: T_PROGRAMA T_IDENTIF

    4 variaveis: %empty
    5          | declaracao_variaveis

    6 $@2: %empty

    7 declaracao_variaveis: declaracao_variaveis tipo $@2 lista_variaveis

    8 $@3: %empty

    9 declaracao_variaveis: tipo $@3 lista_variaveis

   10 tipo: T_LOGICO
   11     | T_INTEIRO

   12 lista_variaveis: lista_variaveis T_IDENTIF
   13                | T_IDENTIF

   14 lista_comandos: %empty
   15               | comando lista_comandos

   16 comando: entrada_saida
   17        | repeticao
   18        | selecao
   19        | atribuicao

   20 entrada_saida: leitura
   21              | escrita

   22 leitura: T_LEIA T_IDENTIF

   23 escrita: T_ESCREVA expressao

   24 $@4: %empty

   25 $@5: %empty

   26 repeticao: T_ENQTO $@4 expressao T_FACA $@5 lista_comandos T_FIMENQTO

   27 $@6: %empty

   28 $@7: %empty

   29 selecao: T_SE expressao $@6 T_ENTAO lista_comandos T_SENAO $@7 lista_comandos T_FIMSE

   30 $@8: %empty

   31 atribuicao: termo $@8 T_ATRIB expressao

   32 expressao: expressao T_VEZES expressao
   33          | expressao T_DIV expressao
   34          | expressao T_MAIS expressao
   35          | expressao T_MENOS expressao
   36          | expressao T_MAIOR expressao
   37          | expressao T_MENOR expressao
   38          | expressao T_IGUAL expressao
   39          | expressao T_E expressao
   40          | expressao T_OU expressao
   41          | termo

   42 termo: T_IDENTIF
   43      | T_STRING
   44      | T_NUMERO
   45      | T_V
   46      | T_F
   47      | T_NAO termo
   48      | T_ABRE expressao T_FECHA


Terminals, with rules where they appear

$end (0) 0
error (256)
T_PROGRAMA (258) 3
T_INICIO (259) 2
T_FIM (260) 2
T_IDENTIF (261) 3 12 13 22 42
T_STRING (262) 43
T_LEIA (263) 22
T_ESCREVA (264) 23
T_SE (265) 29
T_ENTAO (266) 29
T_SENAO (267) 29
T_FIMSE (268) 29
T_ENQTO (269) 26
T_FACA (270) 26
T_FIMENQTO (271) 26
T_MAIS (272) 34
T_MENOS (273) 35
T_VEZES (274) 32
T_DIV (275) 33
T_MAIOR (276) 36
T_MENOR (277) 37
T_IGUAL (278) 38
T_E (279) 39
T_OU (280) 40
T_NAO (281) 47
T_ATRIB (282) 31
T_ABRE (283) 48
T_FECHA (284) 48
T_INTEIRO (285) 11
T_LOGICO (286) 10
T_V (287) 45
T_F (288) 46
T_NUMERO (289) 44


Nonterminals, with rules where they appear

$accept (35)
    on left: 0
programa (36)
    on left: 2, on right: 0
$@1 (37)
    on left: 1, on right: 2
cabecalho (38)
    on left: 3, on right: 2
variaveis (39)
    on left: 4 5, on right: 2
declaracao_variaveis (40)
    on left: 7 9, on right: 5 7
$@2 (41)
    on left: 6, on right: 7
$@3 (42)
    on left: 8, on right: 9
tipo (43)
    on left: 10 11, on right: 7 9
lista_variaveis (44)
    on left: 12 13, on right: 7 9 12
lista_comandos (45)
    on left: 14 15, on right: 2 15 26 29
comando (46)
    on left: 16 17 18 19, on right: 15
entrada_saida (47)
    on left: 20 21, on right: 16
leitura (48)
    on left: 22, on right: 20
escrita (49)
    on left: 23, on right: 21
repeticao (50)
    on left: 26, on right: 17
$@4 (51)
    on left: 24, on right: 26
$@5 (52)
    on left: 25, on right: 26
selecao (53)
    on left: 29, on right: 18
$@6 (54)
    on left: 27, on right: 29
$@7 (55)
    on left: 28, on right: 29
atribuicao (56)
    on left: 31, on right: 19
$@8 (57)
    on left: 30, on right: 31
expressao (58)
    on left: 32 33 34 35 36 37 38 39 40 41, on right: 23 26 29 31 32
    33 34 35 36 37 38 39 40 48
termo (59)
    on left: 42 43 44 45 46 47 48, on right: 31 41 47


State 0

    0 $accept: . programa $end

    $default  reduce using rule 1 ($@1)

    programa  go to state 1
    $@1       go to state 2


State 1

    0 $accept: programa . $end

    $end  shift, and go to state 3


State 2

    2 programa: $@1 . cabecalho variaveis T_INICIO lista_comandos T_FIM

    T_PROGRAMA  shift, and go to state 4

    cabecalho  go to state 5


State 3

    0 $accept: programa $end .

    $default  accept


State 4

    3 cabecalho: T_PROGRAMA . T_IDENTIF

    T_IDENTIF  shift, and go to state 6


State 5

    2 programa: $@1 cabecalho . variaveis T_INICIO lista_comandos T_FIM

    T_INTEIRO  shift, and go to state 7
    T_LOGICO   shift, and go to state 8

    $default  reduce using rule 4 (variaveis)

    variaveis             go to state 9
    declaracao_variaveis  go to state 10
    tipo                  go to state 11


State 6

    3 cabecalho: T_PROGRAMA T_IDENTIF .

    $default  reduce using rule 3 (cabecalho)


State 7

   11 tipo: T_INTEIRO .

    $default  reduce using rule 11 (tipo)


State 8

   10 tipo: T_LOGICO .

    $default  reduce using rule 10 (tipo)


State 9

    2 programa: $@1 cabecalho variaveis . T_INICIO lista_comandos T_FIM

    T_INICIO  shift, and go to state 12


State 10

    5 variaveis: declaracao_variaveis .
    7 declaracao_variaveis: declaracao_variaveis . tipo $@2 lista_variaveis

    T_INTEIRO  shift, and go to state 7
    T_LOGICO   shift, and go to state 8

    $default  reduce using rule 5 (variaveis)

    tipo  go to state 13


State 11

    9 declaracao_variaveis: tipo . $@3 lista_variaveis

    $default  reduce using rule 8 ($@3)

    $@3  go to state 14


State 12

    2 programa: $@1 cabecalho variaveis T_INICIO . lista_comandos T_FIM

    T_IDENTIF  shift, and go to state 15
    T_STRING   shift, and go to state 16
    T_LEIA     shift, and go to state 17
    T_ESCREVA  shift, and go to state 18
    T_SE       shift, and go to state 19
    T_ENQTO    shift, and go to state 20
    T_NAO      shift, and go to state 21
    T_ABRE     shift, and go to state 22
    T_V        shift, and go to state 23
    T_F        shift, and go to state 24
    T_NUMERO   shift, and go to state 25

    $default  reduce using rule 14 (lista_comandos)

    lista_comandos  go to state 26
    comando         go to state 27
    entrada_saida   go to state 28
    leitura         go to state 29
    escrita         go to state 30
    repeticao       go to state 31
    selecao         go to state 32
    atribuicao      go to state 33
    termo           go to state 34


State 13

    7 declaracao_variaveis: declaracao_variaveis tipo . $@2 lista_variaveis

    $default  reduce using rule 6 ($@2)

    $@2  go to state 35


State 14

    9 declaracao_variaveis: tipo $@3 . lista_variaveis

    T_IDENTIF  shift, and go to state 36

    lista_variaveis  go to state 37


State 15

   42 termo: T_IDENTIF .

    $default  reduce using rule 42 (termo)


State 16

   43 termo: T_STRING .

    $default  reduce using rule 43 (termo)


State 17

   22 leitura: T_LEIA . T_IDENTIF

    T_IDENTIF  shift, and go to state 38


State 18

   23 escrita: T_ESCREVA . expressao

    T_IDENTIF  shift, and go to state 15
    T_STRING   shift, and go to state 16
    T_NAO      shift, and go to state 21
    T_ABRE     shift, and go to state 22
    T_V        shift, and go to state 23
    T_F        shift, and go to state 24
    T_NUMERO   shift, and go to state 25

    expressao  go to state 39
    termo      go to state 40


State 19

   29 selecao: T_SE . expressao $@6 T_ENTAO lista_comandos T_SENAO $@7 lista_comandos T_FIMSE

    T_IDENTIF  shift, and go to state 15
    T_STRING   shift, and go to state 16
    T_NAO      shift, and go to state 21
    T_ABRE     shift, and go to state 22
    T_V        shift, and go to state 23
    T_F        shift, and go to state 24
    T_NUMERO   shift, and go to state 25

    expressao  go to state 41
    termo      go to state 40


State 20

   26 repeticao: T_ENQTO . $@4 expressao T_FACA $@5 lista_comandos T_FIMENQTO

    $default  reduce using rule 24 ($@4)

    $@4  go to state 42


State 21

   47 termo: T_NAO . termo

    T_IDENTIF  shift, and go to state 15
    T_STRING   shift, and go to state 16
    T_NAO      shift, and go to state 21
    T_ABRE     shift, and go to state 22
    T_V        shift, and go to state 23
    T_F        shift, and go to state 24
    T_NUMERO   shift, and go to state 25

    termo  go to state 43


State 22

   48 termo: T_ABRE . expressao T_FECHA

    T_IDENTIF  shift, and go to state 15
    T_STRING   shift, and go to state 16
    T_NAO      shift, and go to state 21
    T_ABRE     shift, and go to state 22
    T_V        shift, and go to state 23
    T_F        shift, and go to state 24
    T_NUMERO   shift, and go to state 25

    expressao  go to state 44
    termo      go to state 40


State 23

   45 termo: T_V .

    $default  reduce using rule 45 (termo)


State 24

   46 termo: T_F .

    $default  reduce using rule 46 (termo)


State 25

   44 termo: T_NUMERO .

    $default  reduce using rule 44 (termo)


State 26

    2 programa: $@1 cabecalho variaveis T_INICIO lista_comandos . T_FIM

    T_FIM  shift, and go to state 45


State 27

   15 lista_comandos: comando . lista_comandos

    T_IDENTIF  shift, and go to state 15
    T_STRING   shift, and go to state 16
    T_LEIA     shift, and go to state 17
    T_ESCREVA  shift, and go to state 18
    T_SE       shift, and go to state 19
    T_ENQTO    shift, and go to state 20
    T_NAO      shift, and go to state 21
    T_ABRE     shift, and go to state 22
    T_V        shift, and go to state 23
    T_F        shift, and go to state 24
    T_NUMERO   shift, and go to state 25

    $default  reduce using rule 14 (lista_comandos)

    lista_comandos  go to state 46
    comando         go to state 27
    entrada_saida   go to state 28
    leitura         go to state 29
    escrita         go to state 30
    repeticao       go to state 31
    selecao         go to state 32
    atribuicao      go to state 33
    termo           go to state 34


State 28

   16 comando: entrada_saida .

    $default  reduce using rule 16 (comando)


State 29

   20 entrada_saida: leitura .

    $default  reduce using rule 20 (entrada_saida)


State 30

   21 entrada_saida: escrita .

    $default  reduce using rule 21 (entrada_saida)


State 31

   17 comando: repeticao .

    $default  reduce using rule 17 (comando)


State 32

   18 comando: selecao .

    $default  reduce using rule 18 (comando)


State 33

   19 comando: atribuicao .

    $default  reduce using rule 19 (comando)


State 34

   31 atribuicao: termo . $@8 T_ATRIB expressao

    $default  reduce using rule 30 ($@8)

    $@8  go to state 47


State 35

    7 declaracao_variaveis: declaracao_variaveis tipo $@2 . lista_variaveis

    T_IDENTIF  shift, and go to state 36

    lista_variaveis  go to state 48


State 36

   13 lista_variaveis: T_IDENTIF .

    $default  reduce using rule 13 (lista_variaveis)


State 37

    9 declaracao_variaveis: tipo $@3 lista_variaveis .
   12 lista_variaveis: lista_variaveis . T_IDENTIF

    T_IDENTIF  shift, and go to state 49

    $default  reduce using rule 9 (declaracao_variaveis)


State 38

   22 leitura: T_LEIA T_IDENTIF .

    $default  reduce using rule 22 (leitura)


State 39

   23 escrita: T_ESCREVA expressao .
   32 expressao: expressao . T_VEZES expressao
   33          | expressao . T_DIV expressao
   34          | expressao . T_MAIS expressao
   35          | expressao . T_MENOS expressao
   36          | expressao . T_MAIOR expressao
   37          | expressao . T_MENOR expressao
   38          | expressao . T_IGUAL expressao
   39          | expressao . T_E expressao
   40          | expressao . T_OU expressao

    T_MAIS   shift, and go to state 50
    T_MENOS  shift, and go to state 51
    T_VEZES  shift, and go to state 52
    T_DIV    shift, and go to state 53
    T_MAIOR  shift, and go to state 54
    T_MENOR  shift, and go to state 55
    T_IGUAL  shift, and go to state 56
    T_E      shift, and go to state 57
    T_OU     shift, and go to state 58

    $default  reduce using rule 23 (escrita)


State 40

   41 expressao: termo .

    $default  reduce using rule 41 (expressao)


State 41

   29 selecao: T_SE expressao . $@6 T_ENTAO lista_comandos T_SENAO $@7 lista_comandos T_FIMSE
   32 expressao: expressao . T_VEZES expressao
   33          | expressao . T_DIV expressao
   34          | expressao . T_MAIS expressao
   35          | expressao . T_MENOS expressao
   36          | expressao . T_MAIOR expressao
   37          | expressao . T_MENOR expressao
   38          | expressao . T_IGUAL expressao
   39          | expressao . T_E expressao
   40          | expressao . T_OU expressao

    T_MAIS   shift, and go to state 50
    T_MENOS  shift, and go to state 51
    T_VEZES  shift, and go to state 52
    T_DIV    shift, and go to state 53
    T_MAIOR  shift, and go to state 54
    T_MENOR  shift, and go to state 55
    T_IGUAL  shift, and go to state 56
    T_E      shift, and go to state 57
    T_OU     shift, and go to state 58

    $default  reduce using rule 27 ($@6)

    $@6  go to state 59


State 42

   26 repeticao: T_ENQTO $@4 . expressao T_FACA $@5 lista_comandos T_FIMENQTO

    T_IDENTIF  shift, and go to state 15
    T_STRING   shift, and go to state 16
    T_NAO      shift, and go to state 21
    T_ABRE     shift, and go to state 22
    T_V        shift, and go to state 23
    T_F        shift, and go to state 24
    T_NUMERO   shift, and go to state 25

    expressao  go to state 60
    termo      go to state 40


State 43

   47 termo: T_NAO termo .

    $default  reduce using rule 47 (termo)


State 44

   32 expressao: expressao . T_VEZES expressao
   33          | expressao . T_DIV expressao
   34          | expressao . T_MAIS expressao
   35          | expressao . T_MENOS expressao
   36          | expressao . T_MAIOR expressao
   37          | expressao . T_MENOR expressao
   38          | expressao . T_IGUAL expressao
   39          | expressao . T_E expressao
   40          | expressao . T_OU expressao
   48 termo: T_ABRE expressao . T_FECHA

    T_MAIS   shift, and go to state 50
    T_MENOS  shift, and go to state 51
    T_VEZES  shift, and go to state 52
    T_DIV    shift, and go to state 53
    T_MAIOR  shift, and go to state 54
    T_MENOR  shift, and go to state 55
    T_IGUAL  shift, and go to state 56
    T_E      shift, and go to state 57
    T_OU     shift, and go to state 58
    T_FECHA  shift, and go to state 61


State 45

    2 programa: $@1 cabecalho variaveis T_INICIO lista_comandos T_FIM .

    $default  reduce using rule 2 (programa)


State 46

   15 lista_comandos: comando lista_comandos .

    $default  reduce using rule 15 (lista_comandos)


State 47

   31 atribuicao: termo $@8 . T_ATRIB expressao

    T_ATRIB  shift, and go to state 62


State 48

    7 declaracao_variaveis: declaracao_variaveis tipo $@2 lista_variaveis .
   12 lista_variaveis: lista_variaveis . T_IDENTIF

    T_IDENTIF  shift, and go to state 49

    $default  reduce using rule 7 (declaracao_variaveis)


State 49

   12 lista_variaveis: lista_variaveis T_IDENTIF .

    $default  reduce using rule 12 (lista_variaveis)


State 50

   34 expressao: expressao T_MAIS . expressao

    T_IDENTIF  shift, and go to state 15
    T_STRING   shift, and go to state 16
    T_NAO      shift, and go to state 21
    T_ABRE     shift, and go to state 22
    T_V        shift, and go to state 23
    T_F        shift, and go to state 24
    T_NUMERO   shift, and go to state 25

    expressao  go to state 63
    termo      go to state 40


State 51

   35 expressao: expressao T_MENOS . expressao

    T_IDENTIF  shift, and go to state 15
    T_STRING   shift, and go to state 16
    T_NAO      shift, and go to state 21
    T_ABRE     shift, and go to state 22
    T_V        shift, and go to state 23
    T_F        shift, and go to state 24
    T_NUMERO   shift, and go to state 25

    expressao  go to state 64
    termo      go to state 40


State 52

   32 expressao: expressao T_VEZES . expressao

    T_IDENTIF  shift, and go to state 15
    T_STRING   shift, and go to state 16
    T_NAO      shift, and go to state 21
    T_ABRE     shift, and go to state 22
    T_V        shift, and go to state 23
    T_F        shift, and go to state 24
    T_NUMERO   shift, and go to state 25

    expressao  go to state 65
    termo      go to state 40


State 53

   33 expressao: expressao T_DIV . expressao

    T_IDENTIF  shift, and go to state 15
    T_STRING   shift, and go to state 16
    T_NAO      shift, and go to state 21
    T_ABRE     shift, and go to state 22
    T_V        shift, and go to state 23
    T_F        shift, and go to state 24
    T_NUMERO   shift, and go to state 25

    expressao  go to state 66
    termo      go to state 40


State 54

   36 expressao: expressao T_MAIOR . expressao

    T_IDENTIF  shift, and go to state 15
    T_STRING   shift, and go to state 16
    T_NAO      shift, and go to state 21
    T_ABRE     shift, and go to state 22
    T_V        shift, and go to state 23
    T_F        shift, and go to state 24
    T_NUMERO   shift, and go to state 25

    expressao  go to state 67
    termo      go to state 40


State 55

   37 expressao: expressao T_MENOR . expressao

    T_IDENTIF  shift, and go to state 15
    T_STRING   shift, and go to state 16
    T_NAO      shift, and go to state 21
    T_ABRE     shift, and go to state 22
    T_V        shift, and go to state 23
    T_F        shift, and go to state 24
    T_NUMERO   shift, and go to state 25

    expressao  go to state 68
    termo      go to state 40


State 56

   38 expressao: expressao T_IGUAL . expressao

    T_IDENTIF  shift, and go to state 15
    T_STRING   shift, and go to state 16
    T_NAO      shift, and go to state 21
    T_ABRE     shift, and go to state 22
    T_V        shift, and go to state 23
    T_F        shift, and go to state 24
    T_NUMERO   shift, and go to state 25

    expressao  go to state 69
    termo      go to state 40


State 57

   39 expressao: expressao T_E . expressao

    T_IDENTIF  shift, and go to state 15
    T_STRING   shift, and go to state 16
    T_NAO      shift, and go to state 21
    T_ABRE     shift, and go to state 22
    T_V        shift, and go to state 23
    T_F        shift, and go to state 24
    T_NUMERO   shift, and go to state 25

    expressao  go to state 70
    termo      go to state 40


State 58

   40 expressao: expressao T_OU . expressao

    T_IDENTIF  shift, and go to state 15
    T_STRING   shift, and go to state 16
    T_NAO      shift, and go to state 21
    T_ABRE     shift, and go to state 22
    T_V        shift, and go to state 23
    T_F        shift, and go to state 24
    T_NUMERO   shift, and go to state 25

    expressao  go to state 71
    termo      go to state 40


State 59

   29 selecao: T_SE expressao $@6 . T_ENTAO lista_comandos T_SENAO $@7 lista_comandos T_FIMSE

    T_ENTAO  shift, and go to state 72


State 60

   26 repeticao: T_ENQTO $@4 expressao . T_FACA $@5 lista_comandos T_FIMENQTO
   32 expressao: expressao . T_VEZES expressao
   33          | expressao . T_DIV expressao
   34          | expressao . T_MAIS expressao
   35          | expressao . T_MENOS expressao
   36          | expressao . T_MAIOR expressao
   37          | expressao . T_MENOR expressao
   38          | expressao . T_IGUAL expressao
   39          | expressao . T_E expressao
   40          | expressao . T_OU expressao

    T_FACA   shift, and go to state 73
    T_MAIS   shift, and go to state 50
    T_MENOS  shift, and go to state 51
    T_VEZES  shift, and go to state 52
    T_DIV    shift, and go to state 53
    T_MAIOR  shift, and go to state 54
    T_MENOR  shift, and go to state 55
    T_IGUAL  shift, and go to state 56
    T_E      shift, and go to state 57
    T_OU     shift, and go to state 58


State 61

   48 termo: T_ABRE expressao T_FECHA .

    $default  reduce using rule 48 (termo)


State 62

   31 atribuicao: termo $@8 T_ATRIB . expressao

    T_IDENTIF  shift, and go to state 15
    T_STRING   shift, and go to state 16
    T_NAO      shift, and go to state 21
    T_ABRE     shift, and go to state 22
    T_V        shift, and go to state 23
    T_F        shift, and go to state 24
    T_NUMERO   shift, and go to state 25

    expressao  go to state 74
    termo      go to state 40


State 63

   32 expressao: expressao . T_VEZES expressao
   33          | expressao . T_DIV expressao
   34          | expressao . T_MAIS expressao
   34          | expressao T_MAIS expressao .
   35          | expressao . T_MENOS expressao
   36          | expressao . T_MAIOR expressao
   37          | expressao . T_MENOR expressao
   38          | expressao . T_IGUAL expressao
   39          | expressao . T_E expressao
   40          | expressao . T_OU expressao

    T_VEZES  shift, and go to state 52
    T_DIV    shift, and go to state 53

    $default  reduce using rule 34 (expressao)


State 64

   32 expressao: expressao . T_VEZES expressao
   33          | expressao . T_DIV expressao
   34          | expressao . T_MAIS expressao
   35          | expressao . T_MENOS expressao
   35          | expressao T_MENOS expressao .
   36          | expressao . T_MAIOR expressao
   37          | expressao . T_MENOR expressao
   38          | expressao . T_IGUAL expressao
   39          | expressao . T_E expressao
   40          | expressao . T_OU expressao

    T_VEZES  shift, and go to state 52
    T_DIV    shift, and go to state 53

    $default  reduce using rule 35 (expressao)


State 65

   32 expressao: expressao . T_VEZES expressao
   32          | expressao T_VEZES expressao .
   33          | expressao . T_DIV expressao
   34          | expressao . T_MAIS expressao
   35          | expressao . T_MENOS expressao
   36          | expressao . T_MAIOR expressao
   37          | expressao . T_MENOR expressao
   38          | expressao . T_IGUAL expressao
   39          | expressao . T_E expressao
   40          | expressao . T_OU expressao

    $default  reduce using rule 32 (expressao)


State 66

   32 expressao: expressao . T_VEZES expressao
   33          | expressao . T_DIV expressao
   33          | expressao T_DIV expressao .
   34          | expressao . T_MAIS expressao
   35          | expressao . T_MENOS expressao
   36          | expressao . T_MAIOR expressao
   37          | expressao . T_MENOR expressao
   38          | expressao . T_IGUAL expressao
   39          | expressao . T_E expressao
   40          | expressao . T_OU expressao

    $default  reduce using rule 33 (expressao)


State 67

   32 expressao: expressao . T_VEZES expressao
   33          | expressao . T_DIV expressao
   34          | expressao . T_MAIS expressao
   35          | expressao . T_MENOS expressao
   36          | expressao . T_MAIOR expressao
   36          | expressao T_MAIOR expressao .
   37          | expressao . T_MENOR expressao
   38          | expressao . T_IGUAL expressao
   39          | expressao . T_E expressao
   40          | expressao . T_OU expressao

    T_MAIS   shift, and go to state 50
    T_MENOS  shift, and go to state 51
    T_VEZES  shift, and go to state 52
    T_DIV    shift, and go to state 53

    $default  reduce using rule 36 (expressao)


State 68

   32 expressao: expressao . T_VEZES expressao
   33          | expressao . T_DIV expressao
   34          | expressao . T_MAIS expressao
   35          | expressao . T_MENOS expressao
   36          | expressao . T_MAIOR expressao
   37          | expressao . T_MENOR expressao
   37          | expressao T_MENOR expressao .
   38          | expressao . T_IGUAL expressao
   39          | expressao . T_E expressao
   40          | expressao . T_OU expressao

    T_MAIS   shift, and go to state 50
    T_MENOS  shift, and go to state 51
    T_VEZES  shift, and go to state 52
    T_DIV    shift, and go to state 53

    $default  reduce using rule 37 (expressao)


State 69

   32 expressao: expressao . T_VEZES expressao
   33          | expressao . T_DIV expressao
   34          | expressao . T_MAIS expressao
   35          | expressao . T_MENOS expressao
   36          | expressao . T_MAIOR expressao
   37          | expressao . T_MENOR expressao
   38          | expressao . T_IGUAL expressao
   38          | expressao T_IGUAL expressao .
   39          | expressao . T_E expressao
   40          | expressao . T_OU expressao

    T_MAIS   shift, and go to state 50
    T_MENOS  shift, and go to state 51
    T_VEZES  shift, and go to state 52
    T_DIV    shift, and go to state 53
    T_MAIOR  shift, and go to state 54
    T_MENOR  shift, and go to state 55

    $default  reduce using rule 38 (expressao)


State 70
